force-app/main/default/objects/Book_History__c/Book_History__c.object-meta.xml
<CustomObject>
    <label>Book History</label>
    <nameField>
        <displayFormat>BH-{000}</displayFormat>
        <label>BhNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>