force-app/main/default/objects/Book_History__c/fields/Bname__c.field-meta.xml
<CustomField>
    <fullName>Bname__c</fullName>
    <label>Bname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>