force-app/main/default/objects/Book_History__c/fields/Iss_Date__c.field-meta.xml
<CustomField>
    <fullName>Iss_Date__c</fullName>
    <label>Iss.Date</label>
    <type>Date</type>
</CustomField>