force-app/main/default/objects/Book_History__c/fields/Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>Ref_Date__c</fullName>
    <label>Ref.Date</label>
    <type>Date</type>
</CustomField>