force-app/main/default/objects/Book_History__c/fields/RelB__c.field-meta.xml
<CustomField>
    <fullName>RelB__c</fullName>
    <label>RelB</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Histories</relationshipLabel>
    <relationshipName>Book_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>